--- a/thirdpart/reader-util/CMakeLists.txt
+++ b/thirdpart/reader-util/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(reader-util src/reader_util.cc src/reader_util.h)
+add_library(reader-util src/reader_util.cc src/reader_util.h src/content.cc src/content.h src/section.cc src/section.h)
