--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ project(pe-reader)
 set(CMAKE_CXX_STANDARD 11)
 add_subdirectory(thirdpart/reader-util)
 
-add_executable(pe-reader src/main.cc src/dos_header.cc)
+add_executable(pe-reader src/main.cc src/dos_header.cc thirdpart/x86-disassembler/src/instruction.cc thirdpart/x86-disassembler/src/instruction.h)
 target_include_directories(pe-reader PRIVATE thirdpart/reader-util)
 target_link_libraries(pe-reader reader-util)
