--- a/thirdpart/x86-disassembler/CMakeLists.txt
+++ b/thirdpart/x86-disassembler/CMakeLists.txt
@@ -1,1 +1,5 @@
 project(x86-disassembler)
+
+file(GLOB x86_disassembler_SRC src/*.cc)
+add_library(x86-disassembler ${x86_disassembler_SRC})
+target_include_directories(x86-disassembler INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
